--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,7 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".SignUp"/>
+    tools:context=".SignUp">
+
+
+    <EditText
+        android:id="@+id/editTextTextPersonName4"
+        android:layout_width="321dp"
+        android:layout_marginLeft="45dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:ems="10"
+        android:hint="Enter Full Name"
+        android:inputType="textPersonName"
+        />
+
+    <EditText
+        android:id="@+id/editTextTextEmailAddress2"
+        android:layout_marginTop="80dp"
+        android:layout_width="321dp"
+        android:hint="Email"
+        android:layout_marginLeft="45dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textEmailAddress" />
+
+    <EditText
+        android:id="@+id/editTextTextPassword2"
+        android:layout_marginTop="80dp"
+        android:layout_width="321dp"
+        android:layout_marginLeft="45dp"
+        android:hint="Password"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPassword" />
+
+    <EditText
+        android:id="@+id/editTextTextPassword3"
+        android:layout_marginTop="80dp"
+        android:layout_width="321dp"
+        android:layout_marginLeft="45dp"
+        android:hint="Re-Enter Password"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPassword" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/signup2"
+        android:layout_width="333dp"
+        android:layout_height="53dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="#ff1a1a"
+        android:text="Sign Up"
+        android:onClick="signup2"
+        android:textColor="@color/black"
+        app:cornerRadius="18dp"
+        tools:ignore="MissingConstraints,OnClick" />
+</LinearLayout>
