--- a/app/src/main/res/layout/activity_diseases.xml
+++ b/app/src/main/res/layout/activity_diseases.xml
@@ -1,9 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Diseases">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:textSize="40dp"
+        android:layout_margin="30dp"
+        android:textAlignment="center"
+        android:layout_height="wrap_content"
+        android:text="Diseases" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView4"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/disease_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="40dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="disease_name" />
+
+        <EditText
+            android:id="@+id/disease_2name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="40dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="disease_2name" />
+
+        <EditText
+            android:id="@+id/disease_3name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="40dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="disease_3name" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/disease_info"
+            android:layout_width="333dp"
+            android:layout_height="53dp"
+            android:layout_marginLeft="45dp"
+            android:backgroundTint="#ff1a1a"
+            android:text="Update"
+            android:onClick="update_btn"
+            android:textColor="@color/black"
+            app:cornerRadius="18dp"
+            tools:ignore="MissingConstraints" />
+
+    </LinearLayout>
+
+</RelativeLayout>
