--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:src="@drawable/medicalreportlogo" />
 
     <ImageButton
-        android:id="@+id/imageButton6"
+        android:id="@+id/diseases"
         android:layout_width="183dp"
         android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.407"
         app:layout_constraintStart_toEndOf="@+id/imageButton7"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton6"
+        app:layout_constraintTop_toBottomOf="@+id/diseases"
         app:layout_constraintVertical_bias="0.412"
         tools:srcCompat="@tools:sample/avatars" />
 
