--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -54,8 +54,7 @@
         android:id="@+id/signup2"
         android:layout_width="333dp"
         android:layout_height="53dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginTop="40dp"
+        android:layout_margin="40dp"
         android:backgroundTint="#ff1a1a"
         android:text="Sign Up"
         android:onClick="signup2"
