--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,22 +9,27 @@
     tools:context=".MainActivity">
 
 
+
     <ImageButton
         android:id="@+id/imageButton5"
         android:layout_width="183dp"
         android:layout_height="200dp"
+        android:clickable="true"
+        android:onClick="medicalreport"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.546"
-        android:src="@drawable/medicalreportlogo" />
+        android:src="@drawable/medicalreportlogo"
+        android:focusable="true" />
 
     <ImageButton
         android:id="@+id/diseases"
         android:layout_width="183dp"
         android:layout_height="200dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.448"
@@ -61,15 +66,14 @@
         android:id="@+id/profile_image"
         android:layout_width="133dp"
         android:layout_height="141dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="88dp"
+        android:src="@drawable/profile"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        android:src="@drawable/profile"/>
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView"
