--- a/app/src/main/res/layout/activity_disease_info.xml
+++ b/app/src/main/res/layout/activity_disease_info.xml
@@ -5,12 +5,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Disease_info">
 
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="25dp"
+        android:layout_marginTop="20dp"
         android:text="Your Diseases Information" />
+
+    <TextView
+        android:id="@+id/first_Disease"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:padding="20dp"
+         />
+
+    <TextView
+        android:id="@+id/second_Disease"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:padding="20dp"
+        />
+
+    <TextView
+        android:id="@+id/third_Disease"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:padding="20dp"
+        />
 </LinearLayout>
