--- a/app/src/main/res/layout/activity_disease_info.xml
+++ b/app/src/main/res/layout/activity_disease_info.xml
@@ -19,7 +19,7 @@
         android:text="Your Diseases Information" />
 
     <TextView
-        android:id="@+id/first_Disease"
+        android:id="@+id/entertitle_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
@@ -27,7 +27,7 @@
          />
 
     <TextView
-        android:id="@+id/second_Disease"
+        android:id="@+id/diseasediscription_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
@@ -35,7 +35,7 @@
         />
 
     <TextView
-        android:id="@+id/third_Disease"
+        android:id="@+id/diseasecause_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
