--- a/app/src/main/res/layout/activity_medical_report.xml
+++ b/app/src/main/res/layout/activity_medical_report.xml
@@ -1,44 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MedicalReport">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/uriTxt"
+            android:visibility="invisible"
 
-    <TextView
-        android:id="@+id/uriTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="50dp"
-        android:textSize="14sp"
-  />
-    <TextView
-        android:id="@+id/dwnTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="50dp"
-        android:layout_marginTop="24dp"
-        android:textSize="18sp"
-     />
-    <Button
-        android:id="@+id/upload_pdf"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="upload pdf"
-        />
-    <Button
-        android:id="@+id/upload_docx"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="upload docx"
-        />
+            android:layout_width="2dp"
+            android:layout_height="2dp"
+            android:layout_margin="50dp"
+            android:textSize="14sp"
+            />
+        <TextView
+            android:id="@+id/dwnTxt"
+            android:layout_width="2sp"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
 
-</LinearLayout>
+            android:textSize="18sp"
+            />
+
+        <Button
+            android:id="@+id/upload_pdf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+
+
+            android:text="upload pdf" />
+
+
+    </LinearLayout>
+
+
+</RelativeLayout>
