--- a/app/src/main/res/layout/activity_disease_info.xml
+++ b/app/src/main/res/layout/activity_disease_info.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,37 +8,8 @@
     android:orientation="vertical"
     tools:context=".Disease_info">
 
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="25dp"
-        android:layout_marginTop="20dp"
-        android:text="Your Diseases Information" />
-
-    <TextView
-        android:id="@+id/entertitle_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:padding="20dp"
-         />
-
-    <TextView
-        android:id="@+id/diseasediscription_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:padding="20dp"
-        />
-
-    <TextView
-        android:id="@+id/diseasecause_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:padding="20dp"
-        />
-</LinearLayout>
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/recycler_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
+</RelativeLayout>
